--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Pro-Gram</title>
+    <title>Jobify</title>
   </head>
   <body>
-    <noscript>Hey, Coders!</noscript>
+    <noscript></noscript>
     <div id="root"></div>
   </body>
 </html>
